--- a/.github/workflows/second_action.yml
+++ b/.github/workflows/second_action.yml
@@ -1,7 +1,7 @@
 name: second_workflow
 on: push
 jobs:
-  myjob:
+  myjob1:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout #https://github.com/marketplace/actions/checkout
@@ -10,5 +10,13 @@ jobs:
         uses: actions/setup-python@v3.1.4
       - name: run py file
         run: python3 ./Hello.py
+  
+  myjob2:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout #https://github.com/marketplace/actions/checkout
+        uses: actions/checkout@v3.5.3 #run is not used in case of action
+      - name: run py file
+        run: python3 ./timenow.py
 
           
