--- a/.github/workflows/second_action.yml
+++ b/.github/workflows/second_action.yml
@@ -19,5 +19,12 @@ jobs:
         uses: actions/checkout@v3.5.3 #run is not used in case of action
       - name: run py file
         run: python3 ./timenow.py
+  
+  myjob3:
+    needs: [myjob2] #needs keyword makes this sequential
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Context
+        run: echo "${{toJSON(github)}}" #https://docs.github.com/en/actions/learn-github-actions/contexts
 
           
